--- a/magma/Makefile
+++ b/magma/Makefile
@@ -2,7 +2,7 @@ SHELL=/usr/bin/env bash
 
 DESIRED_CUDA ?= 11.8
 PACKAGE_NAME ?= magma-cuda118
-CUDA_ARCH_LIST ?= -gencode arch=compute_50,code=sm_50 -gencode arch=compute_60,code=sm_60 -gencode arch=compute_70,code=sm_70 -gencode arch=compute_80,code=sm_80 -gencode arch=compute_86,code=sm_86 -gencode arch=compute_90,code=sm_90
+CUDA_ARCH_LIST ?= -gencode arch=compute_80,code=sm_80 -gencode arch=compute_86,code=sm_86
 
 DOCKER_RUN = set -eou pipefail; docker run --rm -i \
 	-v $(shell git rev-parse --show-toplevel):/builder \
@@ -14,6 +14,7 @@ DOCKER_RUN = set -eou pipefail; docker run --rm -i \
 	magma/build_magma.sh
 
 .PHONY: all
+all: magma-cuda126
 all: magma-cuda124
 all: magma-cuda121
 all: magma-cuda118
@@ -22,6 +23,12 @@ all: magma-cuda118
 clean:
 	$(RM) -r magma-*
 	$(RM) -r output
+
+.PHONY: magma-cuda126
+magma-cuda126: DESIRED_CUDA := 12.6
+magma-cuda126: PACKAGE_NAME := magma-cuda126
+magma-cuda126:
+	CMAKE_CXX_FLAGS="-march=native" CMAKE_C_FLAGS="-march=native" DESIRED_CUDA=12.6 PACKAGE_NAME=magma-cuda126 CUDA_ARCH_LIST="-gencode arch=compute_86,code=sm_86" ./build_magma.sh
 
 .PHONY: magma-cuda124
 magma-cuda124: DESIRED_CUDA := 12.4
@@ -41,4 +48,3 @@ magma-cuda118: PACKAGE_NAME := magma-cuda118
 magma-cuda118: CUDA_ARCH_LIST += -gencode arch=compute_37,code=sm_37
 magma-cuda118:
 	$(DOCKER_RUN)
-
